--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div id="braindump" class="page">
     <div class="header">
       <div style="display: flex; align-items: center; gap: 15px;">
-          <i class="fas fa-bars" onclick="toggleMenu()" style="color: var(--accent); cursor:pointer;"></i>
+          <i class="fas fa-bars" onclick="toggleSidebar()" style="color: var(--accent); cursor:pointer;"></i>
           <h1 style="font-size: 12px;">BRAIN_DUMP</h1>
       </div>
       <div style="display: flex; gap: 15px; align-items: center;">
