--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
           <i class="fas fa-bars" onclick="toggleSidebar()" style="color: var(--accent); cursor:pointer;"></i>
           <h1 style="font-size: 12px;">BRAIN_DUMP</h1>
       </div>
-      <div style="display: flex; gap: 15px; align-items: center;">
-          <i class="fas fa-search" onclick="toggleSearch()" style="font-size: 14px; color: var(--dim);"></i>
-          <div class="info" onclick="nav('home')">ESC [X]</div>
+      <div class="search-container">
+          <i class="fas fa-search search-icon"></i>
+        <input type="text" id="search-input" placeholder="Cerca tra le note..." oninput="handleSearch()">
+    </div>
       </div>
     </div>
 
