--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div id="boot-screen">
+<!--   <div id="boot-screen">
     <div id="boot-text"></div>
     <div id="boot-logo-container">
         <img src="icon.png" id="boot-logo" alt="Logo">
@@ -24,7 +24,7 @@
     </div>
     <div><span class="cursor"></span></div>
   </div>    
-
+ -->
   <div id="home" class="page active">
       <div class="header">
         <h1>SYSTEM_OS</h1>
