--- a/index.html
+++ b/index.html
@@ -95,21 +95,19 @@
   
 
 
-        <div id="agenda" class="page">
-            <div class="header">
-                <h1 style="font-size: 12px;">TIMELINE_SCAN</h1>
-                <div class="info" onclick="nav('home')">BACK [X]</div>
-            </div>
-        
-            <main id="agenda-main">
-                <div class="timeline-wrapper">
-                    <div class="timeline-line"></div>
-                    <div id="events-container">
-                    </div>
+<div id="agenda" class="page">
+    <div class="header">
+        <h1 style="font-size: 12px;">CHRONO_SCAN</h1>
+        <div class="info" onclick="nav('home')">BACK [X]</div>
+    </div>
+    
+    <main id="agenda-main">
+        <div class="timeline-wrapper" style="margin-left: 20px; border-left: 2px solid var(--accent); padding-left: 20px;">
+            <div id="events-container">
                 </div>
-            </main>
         </div>
-
+    </main>
+</div>
 
 
   <div id="habit" class="page">
