--- a/index.html
+++ b/index.html
@@ -97,14 +97,17 @@
 
 <div id="agenda" class="page">
     <div class="header">
-        <h1 style="font-size: 12px;">CHRONO_SCAN</h1>
-        <div class="info" onclick="nav('home')">BACK [X]</div>
+        <h1>CHRONO_SCAN</h1>
+        <div class="info" onclick="nav('home')">EXIT [X]</div>
+    </div>
+
+    <div class="agenda-input-wrapper">
+        <input type="text" id="agenda-cmd" placeholder="> AGGIUNGI EVENTO (es: Domani 10:00 Meeting)" onkeydown="if(event.key==='Enter') handleAgendaCommand(this.value, true)">
     </div>
     
     <main id="agenda-main">
-        <div class="timeline-wrapper" style="margin-left: 20px; border-left: 2px solid var(--accent); padding-left: 20px;">
-            <div id="events-container">
-                </div>
+        <div class="timeline-wrapper">
+            <div id="events-container"></div>
         </div>
     </main>
 </div>
