--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  
   <div id="home" class="page active">
       <div class="header">
-        <h1>Life_OS v1.3</h1>
+        <h1>Life_OS v1.4</h1>
         <div class="info"><span id="dateStr">--/--</span><br><span id="clock">00:00</span></div>
       </div>
       
@@ -145,11 +145,12 @@
           <div class="color-selector-container">
               <span class="tool-icon" onclick="toggleColorPicker()"><i class="fas fa-palette"></i></span>
               <div id="color-picker-bubble" class="color-bubble">
-                  <div class="color-dot bg-default" onclick="changeNoteColor('default')"></div>
-                  <div class="color-dot bg-blue" onclick="changeNoteColor('blue')"></div>
-                  <div class="color-dot bg-red" onclick="changeNoteColor('red')"></div>
-                  <div class="color-dot bg-green" onclick="changeNoteColor('green')"></div>
-                  <div class="color-dot bg-yellow" onclick="changeNoteColor('yellow')"></div>
+                  <div class="color-dot dot-default" onclick="changeNoteColor('default')"></div>
+                  <div class="color-dot dot-blue" onclick="changeNoteColor('blue')"></div>
+                  <div class="color-dot dot-red" onclick="changeNoteColor('red')"></div>
+                  <div class="color-dot dot-green" onclick="changeNoteColor('green')"></div>
+                  <div class="color-dot dot-yellow" onclick="changeNoteColor('yellow')"></div>
+                  <div class="color-dot dot-pink" onclick="changeNoteColor('yellow')"></div>
               </div>
           </div>
           <span class="tool-icon" onclick="togglePin()"><i class="fas fa-thumbtack"></i></span>
