--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   <div class="color-dot dot-red" onclick="changeNoteColor('red')"></div>
                   <div class="color-dot dot-green" onclick="changeNoteColor('green')"></div>
                   <div class="color-dot dot-yellow" onclick="changeNoteColor('yellow')"></div>
-                  <div class="color-dot dot-pink" onclick="changeNoteColor('yellow')"></div>
+                  <div class="color-dot dot-pink" onclick="changeNoteColor('pink')"></div>
               </div>
           </div>
           <span class="tool-icon" onclick="togglePin()"><i class="fas fa-thumbtack"></i></span>
