--- a/index.html
+++ b/index.html
@@ -171,13 +171,25 @@
 
 
 
-<!-- start webpushr code --> <script>
-webpushr('setup', {
-  'key': 'BA232ZX5Zislw9HMnqgm1ZEyTaz-98EZSrfobgjTbXX3ql4fZ07Y5f91ciO-708ZjGD4iKoquI9IWp35CjUsyoE',
-  'sw': 'https://misterperry69.github.io/LifeOS/webpushr-sw.js' 
+<script>
+(function(w,d, s, id) {
+    if(typeof(w.webpushr)!=='undefined') return;
+    w.webpushr=w.webpushr||function(){(w.webpushr.q=w.webpushr.q||[]).push(arguments)};
+    var js, fjs = d.getElementsByTagName(s)[0];
+    js = d.createElement(s); js.id = id; js.async=1; 
+    js.src = "https://cdn.webpushr.com/app.min.js";
+    fjs.parentNode.insertBefore(js, fjs);
+}(window,document, 'script', 'webpushr-jssdk'));
+
+// Usiamo un piccolo intervallo per assicurarci che webpushr sia definito prima di chiamarlo
+window.addEventListener('load', function() {
+    if (typeof webpushr !== 'undefined') {
+        webpushr('setup', {
+            'key':'BA232ZX5Zislw9HMnqgm1ZEyTaz-98EZSrfobgjTbXX3ql4fZ07Y5f91ciO-708ZjGD4iKoquI9IWp35CjUsyoE',
+            'sw': 'https://IL_TUO_UTENTE.github.io/LA_TUA_REPO/webpushr-sw.js'
+        });
+    }
 });
-(function(w,d, s, id) {if(typeof(w.webpushr)!=='undefined') return;w.webpushr=w.webpushr||function(){(w.webpushr.q=w.webpushr.q||[]).push(arguments)};var js, fjs = d.getElementsByTagName(s)[0];js = d.createElement(s); js.id = id;js.async=1;js.src = "https://cdn.webpushr.com/app.min.js";fjs.parentNode.appendChild(js);}(window,document, 'script', 'webpushr-jssdk'));webpushr('setup',{'key':'BA232ZX5Zislw9HMnqgm1ZEyTaz-98EZSrfobgjTbXX3ql4fZ07Y5f91ciO-708ZjGD4iKoquI9IWp35CjUsyoE' });</script><!-- end webpushr code -->
-
-
+</script>
 </body>
 </html>
