--- a/index.html
+++ b/index.html
@@ -171,16 +171,10 @@
 
 
 
-<script>
-window.addEventListener('load', function() {
-    if (typeof webpushr !== 'undefined') {
-        webpushr('setup', {
-            'key':'BA232ZX5Zislw9HMnqgm1ZEyTaz-98EZSrfobgjTbXX3ql4fZ07Y5f91ciO-708ZjGD4iKoquI9IWp35CjUsyoE'
-        });
-        // Forza la comparsa della campanella per test
-        webpushr('showSubscriptionBell'); 
-    }
-});
-</script>
+<!-- start webpushr tracking code --> 
+<script>(function(w,d, s, id) {if(typeof(w.webpushr)!=='undefined') return;w.webpushr=w.webpushr||function(){(w.webpushr.q=w.webpushr.q||[]).push(arguments)};var js, fjs = d.getElementsByTagName(s)[0];js = d.createElement(s); js.id = id;js.src = "https://cdn.webpushr.com/app.min.js";
+fjs.parentNode.appendChild(js);}(window,document, 'script', 'webpushr-jssdk-alternative'));
+webpushr('init','BA232ZX5Zislw9HMnqgm1ZEyTaz-98EZSrfobgjTbXX3ql4fZ07Y5f91ciO-708ZjGD4iKoquI9IWp35CjUsyoE','https://misterperry69.github.io/LifeOS/webpushr-sw.js','/LifeOS/');</script>
+<!-- end webpushr tracking code -->
 </body>
 </html>
