--- a/daily.html
+++ b/daily.html
@@ -56,7 +56,7 @@
 
     <script>
         // Placeholder per la logica di collegamento con Google Script
-        const SCRIPT_URL = "IL_TUO_URL_SCRIPT/exec";
+        const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwQPQYYG6qBHwPcZRUFnNYILkm1xgiwWlFZWofg8M2u12xsOBgJDeB8HJmH2JIM0csI/exec";
 
         document.getElementById('current-date').innerText = new Date().toLocaleDateString('it-IT', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
 
