--- a/index.html
+++ b/index.html
@@ -98,21 +98,43 @@
 
 <div id="agenda" class="page">
     <div class="header">
-        <h1>CHRONO_SCAN</h1>
+        <div style="display: flex; align-items: center; gap: 10px;">
+            <span class="w-2 h-2 bg-[#fcee0a] rounded-full animate-pulse shadow-[0_0_8px_#fcee0a]"></span>
+            <h1 id="agenda-title" style="font-size: 12px; color: #fcee0a;">TEMPORAL_LINK</h1>
+        </div>
         <div class="info" onclick="nav('home')">EXIT [X]</div>
     </div>
 
-    <div class="agenda-input-wrapper">
-        <input type="text" id="agenda-cmd" placeholder="> AGGIUNGI EVENTO (es: Domani 10:00 Meeting)" onkeydown="if(event.key==='Enter') handleAgendaCommand(this.value, true)">
-    </div>
-    
-    <main id="agenda-main">
-        <div class="timeline-wrapper">
+    <main id="agenda-main" style="padding: 0 20px;">
+        <div id="neural-input-zone">
+            <div style="display: flex; items-center; gap: 8px; color: #555; margin-bottom: 15px;">
+                <i class="fas fa-terminal" style="font-size: 10px; color: #fcee0a;"></i>
+                <span style="font-[Rajdhani]; font-size: 10px; letter-spacing: 2px;">AWAITING_NEURAL_STREAM...</span>
+            </div>
+            <textarea id="neural-prompt" 
+                placeholder="Butta giù la lista della spesa per oggi... impegni, cazzate, task. Gemini mette ordine."
+                style="width:100%; height:120px; background:#000; border:1px dashed #333; color:#eee; padding:15px; font-family:inherit; outline:none; margin-bottom:15px;"></textarea>
+            <button onclick="synthesizeDaily()" class="cyber-btn" style="width:100%; padding:15px; background:transparent; border:1px solid #fcee0a; color:#fcee0a; font-family:'Rajdhani'; font-weight:bold; letter-spacing:3px;">
+                INITIALIZE_FLOW
+            </button>
+        </div>
+
+        <div id="active-flow-zone" style="display:none;">
+            <div id="daily-timeline-content"></div>
+            <button onclick="closeDaySession()" style="margin-top:20px; color:#555; font-size:10px; border:none; background:none; cursor:pointer;">
+                [ TERMINATE_SESSION & LOG ]
+            </div>
+        </div>
+
+        <div style="margin-top:40px; border-top: 1px solid #222; pt-20">
+            <div style="display: flex; items-center; gap: 8px; color: #555; margin: 20px 0 10px 0;">
+                <span class="w-2 h-2 bg-[#00f3ff] rounded-full shadow-[0_0_8px_#00f3ff]"></span>
+                <span style="font-[Rajdhani]; font-size: 10px; letter-spacing: 2px;">HARD_CALENDAR_SCAN</span>
+            </div>
             <div id="events-container"></div>
         </div>
     </main>
 </div>
-
 
   <div id="habit" class="page">
     <div class="header">
