--- a/index.html
+++ b/index.html
@@ -71,26 +71,24 @@
       </div>
   </div>
   <div id="braindump" class="page">
-<div class="header" style="padding: 15px 20px; min-height: 70px;">
-    <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
-        
-        <div id="header-left" style="display: flex; align-items: center; gap: 12px; overflow: hidden;">
-            <i data-lucide="brain" onclick="toggleSidebar()" style="color: var(--accent); width: 24px; height: 24px; flex-shrink: 0;"></i>
-            <h1 id="dump-title" style="margin: 0; font-family: 'Rajdhani'; font-size: 1.6rem; white-space: nowrap;">BRAIN_DUMP</h1>
+<div class="header" style="padding: 15px 20px; position: sticky; top: 0; background: #000; z-index: 1000; display: flex; flex-direction: column; gap: 10px;">
+    
+    <div style="display: flex; justify-content: space-between; align-items: center;">
+        <div style="display: flex; align-items: center; gap: 10px;">
+            <i data-lucide="brain" onclick="toggleSidebar()" style="color: var(--accent); width: 24px; height: 24px;"></i>
+            <h1 id="dump-title" style="margin: 0; font-family: 'Rajdhani'; font-size: 1.5rem; color: #fff;">BRAIN_DUMP</h1>
         </div>
-
-        <div style="display: flex; align-items: center; gap: 15px; flex-shrink: 0;">
-            <i data-lucide="search" id="search-trigger" onclick="toggleSearch(true)" style="color: var(--dim); width: 20px;"></i>
-            <div onclick="nav('home')" style="font-family: 'JetBrains Mono'; font-size: 12px; color: var(--accent); cursor: pointer;">[esc X]</div>
+        <div style="display: flex; align-items: center; gap: 12px;">
+            <i data-lucide="search" onclick="toggleSearchDirect()" style="color: var(--dim); width: 20px;"></i>
+            <div onclick="nav('home')" style="font-family: 'JetBrains Mono'; font-size: 12px; color: var(--accent);">[esc X]</div>
         </div>
     </div>
 
-    <div id="search-wrapper" style="display: none; position: absolute; top: 15px; left: 55px; right: 90px; background: #000; z-index: 100;">
+    <div id="search-wrapper" style="display: none;">
         <input type="text" id="search-input" 
-               placeholder="TYPE_TO_SEARCH..." 
+               placeholder="> QUERY_DATABASE..." 
                oninput="handleSearch()" 
-               onblur="toggleSearch(false)"
-               style="width: 100%; background: transparent; border: none; border-bottom: 2px solid var(--accent); color: var(--accent); font-family: 'JetBrains Mono'; font-size: 16px; outline: none; padding-bottom: 2px;">
+               style="width: 100%; background: #111; border: 1px solid var(--accent); color: var(--accent); font-family: 'JetBrains Mono'; font-size: 14px; padding: 8px; outline: none;">
     </div>
 </div>
 
