--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="node-info" onclick="nav('home')" style="cursor: pointer; font-weight: bold; color: var(--accent); font-family: 'JetBrains Mono';">[X]</div>
     </div>
 
-    <div id="search-wrapper" class="search-wrapper" style="position: absolute; left: 55px; top: 45px; right: 80px; display: none; background: #000; z-index: 100;">
+    <div id="search-wrapper" class="search-wrapper">
         <input type="text" id="search-input" placeholder="SEARCH_NEURAL_RECORDS..." 
                oninput="handleSearch()" onblur="toggleSearch(false)"
                style="width: 100%; background: transparent; border: none; border-bottom: 2px solid var(--accent); color: var(--accent); font-family: 'JetBrains Mono'; font-size: 16px; outline: none;">
