--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
 
     <div id="search-wrapper" class="search-wrapper">
         <input type="text" id="search-input" placeholder="SEARCH_NEURAL_RECORDS..." 
-               oninput="handleSearch()" onblur="toggleSearch(false)"
-               style="width: 100%; background: transparent; border: none; border-bottom: 2px solid var(--accent); color: var(--accent); font-family: 'JetBrains Mono'; font-size: 16px; outline: none;">
+               oninput="handleSearch()" onblur="toggleSearch(false)">
     </div>
 </div>
 
